--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -1,3 +1,5 @@
 # Convolutional Neural Networks in TensorFlow
 
 https://www.coursera.org/learn/convolutional-neural-networks-tensorflow
+
+- data cleaning: handle inconsistent image sizes, other things in the images, etc.
