discussion forum link

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -2,6 +2,8 @@
 
 https://www.coursera.org/learn/convolutional-neural-networks-tensorflow
 
+Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
+
 - multiple layers of convolution be thought of as distilling information contributing to determining an image class
 
 - data cleaning: handle inconsistent image sizes, other things in the images, converting to numbers in a normalized 0-1 range, etc.
