--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -16,4 +16,4 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 
     - `training_data_generator = data_generator.flow_from_directory(dir,batch_size,class_mode='binary',target_size=(150,150))`
 
-    - this colab also gives example code for visualizing each layer to see intermediate feature representations (by using the original model to create another model that is able to provide us the multiple outputs (per-layer outputs))
+    - this colab also gives example code for visualizing each layer to see intermediate feature representations (by using the original model to create another model that is able to provide us the multiple outputs (per-layer outputs)) - note `display_grid`
