note on data augmentation

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -21,3 +21,7 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
     - this colab also gives example code for visualizing each layer to see intermediate feature representations (by using the original model to create another model that is able to provide us the multiple outputs (per-layer outputs)) - note `display_grid`
 
     - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? or do something else?
+
+- data generation/augmentation: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data
+
+  - it's actually better to let tensorflow do this on the fly (instead of using up storage faster with making actual copies of images, and to start with unchanged data)
