--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -22,6 +22,6 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 
     - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? or do something else?
 
-- data generation/augmentation: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data
+- data generation/augmentation: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data (example: images of only cats standing up vs sideways lying down)
 
   - it's actually better to let tensorflow do this on the fly (instead of using up storage faster with making actual copies of images, and to start with unchanged data)
