add sub-headings to break things up into sections

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -6,7 +6,9 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 
 - multiple layers of convolution be thought of as distilling information contributing to determining an image class
 
-- data cleaning: handle inconsistent image sizes, other things in the images, converting to numbers in a normalized 0-1 range, etc.
+## data cleaning
+
+- **data cleaning**: handle inconsistent image sizes, other things in the images, converting to numbers in a normalized 0-1 range, etc.
 
   - example code/colab: https://colab.research.google.com/github/https-deeplearning-ai/tensorflow-1-public/blob/master/C2/W1/ungraded_lab/C2_W1_Lab_1_cats_vs_dogs.ipynb and https://colab.research.google.com/drive/1brqWrx-6qf9Pg3cnxy0uygwV5kjELPZF?usp=sharing
 
@@ -22,6 +24,8 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 
     - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? or do something else?
 
-- data generation/augmentation: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data (example: images of only cats standing up vs sideways lying down)
+## data generation/augmentation
+
+- **data generation/augmentation**: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data (example: images of only cats standing up vs sideways lying down)
 
   - it's actually better to let tensorflow do this on the fly (instead of using up storage faster with making actual copies of images, and to start with unchanged data)
