mention there are other options for ImageDataGenerator

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -26,6 +26,6 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 
 ## data generation/augmentation
 
-- **data generation/augmentation**: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data (example: images of only cats standing up vs sideways lying down)
+- **data generation/augmentation**: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data (example: images of only cats standing up vs sideways lying down) - `ImageDataGenerator(...other options!...)`
 
   - it's actually better to let tensorflow do this on the fly (instead of using up storage faster with making actual copies of images, and to start with unchanged data)
