segue into next section

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -22,7 +22,7 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 
     - this colab also gives example code for visualizing each layer to see intermediate feature representations (by using the original model to create another model that is able to provide us the multiple outputs (per-layer outputs)) - note `display_grid`
 
-    - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? or do something else?
+    - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? better: do data augmentation (see next section)
 
 ## data generation/augmentation
 
