extra note on data augmentation and another colab link

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -10,7 +10,7 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 
 - **data cleaning**: handle inconsistent image sizes, other things in the images, converting to numbers in a normalized 0-1 range, etc.
 
-  - example code/colab: https://colab.research.google.com/github/https-deeplearning-ai/tensorflow-1-public/blob/master/C2/W1/ungraded_lab/C2_W1_Lab_1_cats_vs_dogs.ipynb and https://colab.research.google.com/drive/1brqWrx-6qf9Pg3cnxy0uygwV5kjELPZF?usp=sharing
+  - example code/colab: https://colab.research.google.com/github/https-deeplearning-ai/tensorflow-1-public/blob/master/C2/W1/ungraded_lab/C2_W1_Lab_1_cats_vs_dogs.ipynb and https://colab.research.google.com/drive/1brqWrx-6qf9Pg3cnxy0uygwV5kjELPZF (see a later colab for basically the same code with data augmentation added to avoid overfitting)
 
     - remember: for a 2-class (binary) classification output (0% - 100% probability of being class A instead of class B), you can use `activation='sigmoid'` for the output layer, and `loss='binary_crossentropy'`
 
@@ -29,3 +29,7 @@ Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
 - **data generation/augmentation**: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data (example: images of only cats standing up vs sideways lying down) - `ImageDataGenerator(...other options!...)`
 
   - it's actually better to let tensorflow do this on the fly (instead of using up storage faster with making actual copies of images, and to start with unchanged data)
+
+  - make sure that you apply data augmentation to both training and testing sets
+
+  - my colab assignment solution: https://colab.research.google.com/drive/1_lpUhJmctFI8ARWx0Da7SSyVMxqLE15s (basically the same code as before but with data augmentation added to avoid overfitting)
