--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -1,8 +1,10 @@
 # Convolutional Neural Networks in TensorFlow
 
-https://www.coursera.org/learn/convolutional-neural-networks-tensorflow
+- course: https://www.coursera.org/learn/convolutional-neural-networks-tensorflow
 
-Discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
+- slides: https://community.deeplearning.ai/t/tf1-course-1-lecture-notes/124222
+
+- companion repo: https://github.com/https-deeplearning-ai/tensorflow-1-public/tree/main/C2
 
 - multiple layers of convolution be thought of as distilling information contributing to determining an image class
 
