more notes + transfer learning + multi-class

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -12,9 +12,13 @@
 
 - **data cleaning**: handle inconsistent image sizes, other things in the images, converting to numbers in a normalized 0-1 range, etc.
 
-  - example code/colab: https://colab.research.google.com/github/https-deeplearning-ai/tensorflow-1-public/blob/master/C2/W1/ungraded_lab/C2_W1_Lab_1_cats_vs_dogs.ipynb and https://colab.research.google.com/drive/1brqWrx-6qf9Pg3cnxy0uygwV5kjELPZF (see a later colab for basically the same code with data augmentation added to avoid overfitting)
+  - example code/colab: https://colab.research.google.com/github/https-deeplearning-ai/tensorflow-1-public/blob/master/C2/W1/ungraded_lab/C2_W1_Lab_1_cats_vs_dogs.ipynb
+
+  - my colab assignment solution: https://colab.research.google.com/drive/1brqWrx-6qf9Pg3cnxy0uygwV5kjELPZF (see a later colab for basically the same code with data augmentation added to avoid overfitting)
 
     - remember: for a 2-class (binary) classification output (0% - 100% probability of being class A instead of class B), you can use `activation='sigmoid'` for the output layer, and `loss='binary_crossentropy'`
+
+      - but for multi-class, see notes below
 
     - `os.path.join` and `os.makedirs`
 
@@ -24,7 +28,7 @@
 
     - this colab also gives example code for visualizing each layer to see intermediate feature representations (by using the original model to create another model that is able to provide us the multiple outputs (per-layer outputs)) - note `display_grid`
 
-    - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? better: do data augmentation (see next section)
+    - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? but even better: do data augmentation (see next section) and dropout (see next next section) --> a good signal that we'er avoiding overfitting is the training and testing history are increasing in sync with each other
 
 ## data generation/augmentation
 
@@ -34,4 +38,26 @@
 
   - make sure that you apply data augmentation to both training and testing sets
 
+  - (you could also generate data with realistic computer graphics CGI)
+
   - my colab assignment solution: https://colab.research.google.com/drive/1_lpUhJmctFI8ARWx0Da7SSyVMxqLE15s (basically the same code as before but with data augmentation added to avoid overfitting)
+
+## transfer learning
+
+- **transfer learning** lets you use pre-existing models that were pre-trained on lots of data and extracted many features, lock the earlier layers of those models (`base_model.trainable = False` or `for layer in pre_trained_model.layers: layer.trainable = False`), and then add your own layers (`Model(inputs=pre_trained_model.input, outputs=x_extra_layers)`), to let you train faster and also get better accuracy for your specific smaller dataset/application
+
+  - https://www.tensorflow.org/tutorials/images/transfer_learning
+
+  - my colab assignment solution: https://colab.research.google.com/drive/1IH4JJXm4EGbtlBJLtjRhEzSS8SdU0hpa
+
+- **dropout**: pretend a random number of neurons are removed, to prevent neighbouring neurons from affecting each other's weights and reduce "specialization" and to prevent "over-reliance" on any one neuron (you can also change the probabilities per layer) = [regularization](https://github.com/hchiam/machineLearning/blob/master/more_notes/googleMLCrashCourse.md#:~:text=the%20output%20once).-,regularization,-%3D%20penalizing%20model%20complexity)
+
+  - more details: https://www.youtube.com/watch?v=ARq74QuavAo
+
+## multi-class classification
+
+- my colab assignment solution: https://colab.research.google.com/drive/1PgX7dF6e7FF9f14Gff81FeiE3CgZ-vHC
+
+- for a 2-class (binary) classification output (0% - 100% probability of being class A instead of class B), you can use `activation='sigmoid'` for the output layer, and `loss='binary_crossentropy'`
+
+- but for multi-class, use `class_mode='categorical'` for the data generator, use `number_of_classes, activation='softmax'` for the output layer, and `loss='categorical_crossentropy'`
