--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -8,7 +8,7 @@
 
 - multiple layers of convolution be thought of as distilling information contributing to determining an image class
 
-## data cleaning
+## 1) data cleaning
 
 - **data cleaning**: handle inconsistent image sizes, other things in the images, converting to numbers in a normalized 0-1 range, etc.
 
@@ -30,7 +30,7 @@
 
     - this colab also has code for tracking learning history, which can be used to check for overfitting (training versus validation loss) - consider stopping after 2 epochs of training? but even better: do data augmentation (see next section) and dropout (see next next section) --> a good signal that we'er avoiding overfitting is the training and testing history are increasing in sync with each other
 
-## data generation/augmentation
+## 2) data generation/augmentation
 
 - **data generation/augmentation**: e.g. "image augmentation", that is, to generate images that are rotated, skewed, etc. so you can try to cover more possible cases when you have not enough data (example: images of only cats standing up vs sideways lying down) - `ImageDataGenerator(...other options!...)`
 
@@ -42,7 +42,7 @@
 
   - my colab assignment solution: https://colab.research.google.com/drive/1_lpUhJmctFI8ARWx0Da7SSyVMxqLE15s (basically the same code as before but with data augmentation added to avoid overfitting)
 
-## transfer learning
+## 3) transfer learning
 
 - **transfer learning** lets you use pre-existing models that were pre-trained on lots of data and extracted many features, lock the earlier layers of those models (`base_model.trainable = False` or `for layer in pre_trained_model.layers: layer.trainable = False`), and then add your own layers (`Model(inputs=pre_trained_model.input, outputs=x_extra_layers)`), to let you train faster and also get better accuracy for your specific smaller dataset/application
 
@@ -54,7 +54,7 @@
 
   - more details: https://www.youtube.com/watch?v=ARq74QuavAo
 
-## multi-class classification
+## 4) multi-class classification
 
 - my colab assignment solution: https://colab.research.google.com/drive/1PgX7dF6e7FF9f14Gff81FeiE3CgZ-vHC
 
