add discussion forum link to C2.md too for convenience

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -6,6 +6,8 @@
 
 - companion repo: https://github.com/https-deeplearning-ai/tensorflow-1-public/tree/main/C2
 
+- discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-2/80
+
 - multiple layers of convolution be thought of as distilling information contributing to determining an image class
 
 ## 1) data cleaning
