`categorical_crossentropy` vs `sparse_categorical_crossentropy`

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -63,3 +63,8 @@
 - for a 2-class (binary) classification output (0% - 100% probability of being class A instead of class B), you can use `activation='sigmoid'` for the output layer, and `loss='binary_crossentropy'`
 
 - but for multi-class, use `class_mode='categorical'` for the data generator, use `number_of_classes, activation='softmax'` for the output layer, and `loss='categorical_crossentropy'`
+
+- `categorical_crossentropy` vs `sparse_categorical_crossentropy` = one-hot and all probabilities vs just one:
+
+  - `categorical_crossentropy` gives you `[0, 1, 0, 0, 0]` and `[.2, .5, .1, .1, .1]`
+  - `sparse_categorical_crossentropy` gives you `[1]` and `[.5]`
