cite reference for `categorical_crossentropy` vs `sparse_categorical_crossentropy`

--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -64,7 +64,7 @@
 
 - but for multi-class, use `class_mode='categorical'` for the data generator, use `number_of_classes, activation='softmax'` for the output layer, and `loss='categorical_crossentropy'`
 
-- `categorical_crossentropy` vs `sparse_categorical_crossentropy` = one-hot and all probabilities vs just one:
+- `categorical_crossentropy` vs `sparse_categorical_crossentropy` = one-hot and all probabilities vs just one: ([reference](https://stackoverflow.com/questions/58565394/what-is-the-difference-between-sparse-categorical-crossentropy-and-categorical-c/58566065#58566065))
 
   - `categorical_crossentropy` gives you `[0, 1, 0, 0, 0]` and `[.2, .5, .1, .1, .1]`
   - `sparse_categorical_crossentropy` gives you `[1]` and `[.5]`
