--- a/my_coursera_notes/C2.md
+++ b/my_coursera_notes/C2.md
@@ -52,6 +52,8 @@
 
   - my colab assignment solution: https://colab.research.google.com/drive/1IH4JJXm4EGbtlBJLtjRhEzSS8SdU0hpa
 
+    - uses `x = layers.Dropout(0.3)(x)`:
+
 - **dropout**: pretend a random number of neurons are removed, to prevent neighbouring neurons from affecting each other's weights and reduce "specialization" and to prevent "over-reliance" on any one neuron (you can also change the probabilities per layer) = [regularization](https://github.com/hchiam/machineLearning/blob/master/more_notes/googleMLCrashCourse.md#:~:text=regularization%20%3D%20penalizing%20model%20complexity)
 
   - more details: https://www.youtube.com/watch?v=ARq74QuavAo
