sentence tokenizer code

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -7,3 +7,17 @@
 - companion repo: https://github.com/https-deeplearning-ai/tensorflow-1-public/tree/main/C3
 
 - discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-3/81
+
+```py
+import tensorflow as tf
+from tf import keras
+from tf.keras.preprocessing.text import Tokenizer
+
+tokenizer = Tokenizer(num_words=top_n_common_words_to_tokenize_for_tons_of_data)
+
+sentences = ['I love my dog', 'I love my cat']
+tokenizer.fit_on_texts(sentences)
+word_index = tokenizer.word_index # dictionary key-value pairs
+
+print(word_index) # {'i': 1, 'love': 2, 'my': 3, 'dog': 4, 'cat': 5}
+```
