expand on the code

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -12,12 +12,26 @@
 import tensorflow as tf
 from tf import keras
 from tf.keras.preprocessing.text import Tokenizer
+from tf.keras.preprocessing.sequence import pad_sequences
 
-tokenizer = Tokenizer(num_words=top_n_common_words_to_tokenize_for_tons_of_data)
+tokenizer = Tokenizer(
+  num_words=100, # use top 100 most-common words to tokenize for tons of data
+  oov_token='<OOV>', # mark not-yet-seen words as OOV = Out Of Vocabulary
+)
 
 sentences = ['I love my dog', 'I love my cat']
 tokenizer.fit_on_texts(sentences)
-word_index = tokenizer.word_index # dictionary key-value pairs
 
+word_index = tokenizer.word_index # dictionary key-value pairs
 print(word_index) # {'i': 1, 'love': 2, 'my': 3, 'dog': 4, 'cat': 5}
+
+sequences = tokenizer.texts_to_sequences(sentences)
+print(sequences) # [[1,2,3,4], [1,2,3,5]]
+
+padded = pad_sequences( # add 0s to make inputs of uniform size
+  sequences,
+  padding='post', # use 'post' to add padding to end of sentence
+  maxlen=5, # max number of words to include in encoding, and then
+  truncating='post' # truncate from end of sentence if there too many words in sentence
+)
 ```
