python code to load json data into python

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -35,3 +35,20 @@ padded = pad_sequences( # add 0s to make inputs of uniform size
   truncating='post' # truncate from end of sentence if there too many words in sentence
 )
 ```
+
+```py
+# load JSON data in Python:
+
+import json
+
+with open('data.json', 'r') as f:
+  datastore = json.load(f)
+
+prop1 = []
+prop2 = []
+prop3 = []
+for item in datastore:
+  prop1.append(item['prop1'])
+  prop2.append(item['prop2'])
+  prop3.append(item['prop3'])
+```
