--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -15,14 +15,14 @@ from tf.keras.preprocessing.text import Tokenizer
 from tf.keras.preprocessing.sequence import pad_sequences
 
 tokenizer = Tokenizer(
-  num_words=100, # use top 100 most-common words to tokenize for tons of data
+  num_words=100, # use top 100 most-common words to tokenize SENTENCES for tons of data
   oov_token='<OOV>', # mark not-yet-seen words as OOV = Out Of Vocabulary
 )
 
 sentences = ['I love my dog', 'I love my cat']
 tokenizer.fit_on_texts(sentences)
 
-word_index = tokenizer.word_index # dictionary key-value pairs
+word_index = tokenizer.word_index # dictionary key-value pairs (may have len > than num_words)
 print(word_index) # {'i': 1, 'love': 2, 'my': 3, 'dog': 4, 'cat': 5}
 
 sequences = tokenizer.texts_to_sequences(sentences)
