sarcasm detection dataset link

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -8,6 +8,8 @@
 
 - discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-3/81
 
+- sarcasm detection dataset: https://www.kaggle.com/rmisra/news-headlines-dataset-for-sarcasm-detection/home
+
 ```py
 import tensorflow as tf
 from tf import keras
