comment out maxlen and truncating

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -33,8 +33,8 @@ print(sequences) # [[1,2,3,4], [1,2,3,5]]
 padded = pad_sequences( # add 0s to make inputs of uniform size
   sequences,
   padding='post', # use 'post' to add padding to end of sentence (default is 'pre')
-  maxlen=5, # max number of words to include in encoding (else all len of longest)
-  truncating='post' # truncate from end of sentence if there too many words in sentence
+  # maxlen=5, # max number of words to include in encoding (else all len of longest)
+  # truncating='post' # truncate from end of sentence if there too many words in sentence
 )
 ```
 
