--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -10,6 +10,8 @@
 
 - sarcasm detection dataset: https://www.kaggle.com/rmisra/news-headlines-dataset-for-sarcasm-detection/home
 
+- stopwords = words to ignore for our purposes (e.g. "of", "the")
+
 ```py
 import tensorflow as tf
 from tf import keras
