--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -47,6 +47,8 @@ import json
 
 with open('data.json', 'r') as f:
   datastore = json.load(f)
+  # print(f'First line" {f.readline()}')
+  # print(f'Second line" {f.readline()}')
 
 prop1 = []
 prop2 = []
