python code to load csv data into python

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -41,7 +41,7 @@ padded = pad_sequences( # add 0s to make inputs of uniform size
 ```
 
 ```py
-# load JSON data in Python:
+# load JSON data into Python:
 
 import json
 
@@ -50,11 +50,30 @@ with open('data.json', 'r') as f:
   # print(f'First line" {f.readline()}')
   # print(f'Second line" {f.readline()}')
 
-prop1 = []
-prop2 = []
-prop3 = []
-for item in datastore:
-  prop1.append(item['prop1'])
-  prop2.append(item['prop2'])
-  prop3.append(item['prop3'])
+  prop1 = []
+  prop2 = []
+  prop3 = []
+  for row in datastore:
+    prop1.append(row['prop1'])
+    prop2.append(row['prop2'])
+    prop3.append(row['prop3'])
+```
+
+```py
+# load CSV data into Python:
+
+import csv
+
+with open('data.csv', 'r') as f:
+  datastore = csv.reader(csvfile, delimiter=',')
+  # print(f'First line" {f.readline()}')
+  # print(f'Second line" {f.readline()}')
+
+  prop1 = []
+  prop2 = []
+  prop3 = []
+  for row in datastore:
+    prop1.append(row['prop1'])
+    prop2.append(row['prop2'])
+    prop3.append(row['prop3'])
 ```
