--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -12,6 +12,8 @@
 
 - stopwords = words to ignore for our purposes (e.g. "of", "the")
 
+- fun fact: TensorFlow Data Services (TFDS) are built-in providers of datasets so you can get started learning ML faster
+
 ```py
 import tensorflow as tf
 from tf import keras
