--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -10,6 +10,8 @@
 
 - sarcasm detection dataset: https://www.kaggle.com/rmisra/news-headlines-dataset-for-sarcasm-detection/home
 
+- IMDB review dataset: https://ai.stanford.edu/~amaas/data/sentiment/
+
 - stopwords = words to ignore for our purposes (e.g. "of", "the")
 
 - fun fact: TensorFlow Data Services (TFDS) are built-in providers of datasets so you can get started learning ML faster
