--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -14,7 +14,7 @@
 
 - stopwords = words to ignore for our purposes (e.g. "of", "the")
 
-- fun fact: TensorFlow Data Services (TFDS) are built-in providers of datasets so you can get started learning ML faster
+- fun fact: `tensorflow_datasets` TensorFlow Data Services (TFDS) are built-in providers of datasets so you can get started learning ML faster
 
 ```py
 import tensorflow as tf
