update notes on getting data and processing for nlp

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -16,18 +16,44 @@
 
 - fun fact: `tensorflow_datasets` TensorFlow Data Services (TFDS) are built-in providers of datasets so you can get started learning ML faster
 
+  ```py
+  import tensorflow_datasets as tfds
+  import numpy as np
+  imdb, info = tfds.load('imdb_reviews', with_info=True, as_supervised=True)
+  train_data, test_data = imdb['train'], imdb['test']
+  train_labels = []
+  train_sentences = []
+  test_labels = []
+  test_sentences = []
+  for sentence, label in train_data:
+    train_labels.append(label.numpy()) # .numpy() turns tensor into value(s)
+    train_sentences.append(sentence.numpy().decode('utf8'))
+  for sentence, label in test_data:
+    test_labels.append(label.numpy())
+    test_sentences.append(sentence.numpy().decode('utf8'))
+  train_labels_final = np.array(train_labels)
+  test_labels_final = np.array(test_labels)
+  ```
+
 ```py
+vocab_size = 100
+embedding_dim = 16
+max_length = 120
+trunc_type = 'post'
+oov_tok = '<OOV>'
+
+sentences = ['I love my dog', 'I love my cat']
+
 import tensorflow as tf
 from tf import keras
 from tf.keras.preprocessing.text import Tokenizer
 from tf.keras.preprocessing.sequence import pad_sequences
 
 tokenizer = Tokenizer(
-  num_words=100, # use top 100 most-common words to tokenize SENTENCES for tons of data
-  oov_token='<OOV>', # mark not-yet-seen words as OOV = Out Of Vocabulary
+  num_words=vocab_size, # use top x most-common words to tokenize SENTENCES for tons of data
+  oov_token=oov_tok, # mark not-yet-seen words as OOV = Out Of Vocabulary
 )
 
-sentences = ['I love my dog', 'I love my cat']
 tokenizer.fit_on_texts(sentences)
 
 word_index = tokenizer.word_index # dictionary key-value pairs (may have len > than num_words)
@@ -39,8 +65,8 @@ print(sequences) # [[1,2,3,4], [1,2,3,5]]
 padded = pad_sequences( # add 0s to make inputs of uniform size
   sequences,
   padding='post', # use 'post' to add padding to end of sentence (default is 'pre')
-  # maxlen=5, # max number of words to include in encoding (else all len of longest)
-  # truncating='post' # truncate from end of sentence if there too many words in sentence
+  # maxlen=max_length, # max number of words to include in encoding (else all len of longest)
+  # truncating=trunc_type # truncate from end of sentence if there too many words in sentence
 )
 ```
 
