model with embedding layer

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -35,7 +35,6 @@
   test_labels_final = np.array(test_labels)
   ```
 
-
 ```py
 # load JSON data into Python:
 
@@ -107,4 +106,13 @@ padded = pad_sequences( # add 0s to make inputs of uniform size
   # maxlen=max_length, # max number of words to include in encoding (else all len of longest)
   # truncating=trunc_type # truncate from end of sentence if there too many words in sentence
 )
+
+# create a model with an embedding layer!
+
+model = tf.keras.Sequential([
+  tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),
+  tf.keras.layers.Flatten(),
+  tf.keras.layers.Dense(6, activation='relu'),
+  tf.keras.layers.Dense(1, activation='sigmoid')
+])
 ```
