Flatten vs GlobalAveragePooling1D

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -111,7 +111,8 @@ padded = pad_sequences( # add 0s to make inputs of uniform size
 
 model = tf.keras.Sequential([
   tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),
-  tf.keras.layers.Flatten(),
+  # tf.keras.layers.Flatten(), # may be slower but more accurate than:
+  tf.keras.layers.GlobalAveragePooling1D(), # flatten by averaging across the vector
   tf.keras.layers.Dense(6, activation='relu'),
   tf.keras.layers.Dense(1, activation='sigmoid')
 ])
