--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -35,9 +35,9 @@
   test_labels_final = np.array(test_labels)
   ```
 
-```py
-# load JSON data into Python:
+## load JSON data into Python:
 
+```py
 import json
 
 with open('data.json', 'r') as f:
@@ -54,9 +54,9 @@ with open('data.json', 'r') as f:
     prop3.append(row['prop3'])
 ```
 
-```py
-# load CSV data into Python:
+## load CSV data into Python:
 
+```py
 import csv
 
 with open('data.csv', 'r') as f:
@@ -79,6 +79,7 @@ embedding_dim = 16
 max_length = 120
 trunc_type = 'post'
 oov_tok = '<OOV>'
+num_epochs = 10
 
 sentences = ['I love my dog', 'I love my cat']
 
@@ -106,9 +107,12 @@ padded = pad_sequences( # add 0s to make inputs of uniform size
   # maxlen=max_length, # max number of words to include in encoding (else all len of longest)
   # truncating=trunc_type # truncate from end of sentence if there too many words in sentence
 )
+# do similar for test_padded = pad_sequences(...)
+```
 
-# create a model with an embedding layer!
+## create a model with an embedding layer!
 
+```py
 model = tf.keras.Sequential([
   tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),
   # tf.keras.layers.Flatten(), # may be slower but more accurate than:
@@ -116,4 +120,46 @@ model = tf.keras.Sequential([
   tf.keras.layers.Dense(6, activation='relu'),
   tf.keras.layers.Dense(1, activation='sigmoid')
 ])
+model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])
+model.summary()
+model.fit(
+  padded,
+  train_labels_final,
+  epochs=num_epochs,
+  validation_data=(test_padded, test_labels_final)
+)
 ```
+
+## visualize the model's embeddings
+
+```py
+embedding_layer = model.layers[0] # first layer as per model above
+weights = embedding_layer.get_weights()
+print(weights.shape) # shape: (vocab_size, embedding_dim), e.g. (10000, 16)
+print(tokenizer.word_index) # e.g., {word: 1, ...}
+print(tokenizer.index_word) # e.g., {1: word, ...}
+
+import io
+vectors = io.open('vectors.tsv', 'w', encoding='utf-8')
+metadata = io.open('metadata.tsv', 'w', encoding='utf-8')
+for word_number_key in range(1, vocab_size):
+  word = tokenizer.index_word[word_number_key]
+  embeddings = weights[word_number_key]
+  metadata.write(word + '\n')
+  vectors.write('\t'.join([str(x) for x in embeddings]) + '\n')
+vectors.close()
+metadata.close()
+
+# # to download the files into Google Colab:
+# try:
+#   from google.colab import files
+# except ImportError:
+#   pass
+# else:
+#   files.download('vectors.tsv')
+#   files.download('metadata.tsv')
+```
+
+## to then visualize those exported .tsv files:
+
+https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
