padded test sequences for completeness

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -107,7 +107,9 @@ padded = pad_sequences( # add 0s to make inputs of uniform size
   # maxlen=max_length, # max number of words to include in encoding (else all len of longest)
   # truncating=trunc_type # truncate from end of sentence if there too many words in sentence
 )
-# do similar for test_padded = pad_sequences(...)
+# do similar for test: test_padded = pad_sequences(...)
+test_sequences = tokenizer.texts_to_sequences(test_sentences)
+test_padded = pad_sequences(test_sequences, maxlen=Max_length)
 ```
 
 ## create a model with an embedding layer!
