rename: metadata -> words

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -142,15 +142,15 @@ print(tokenizer.word_index) # e.g., {word: 1, ...}
 print(tokenizer.index_word) # e.g., {1: word, ...}
 
 import io
-vectors = io.open('vectors.tsv', 'w', encoding='utf-8')
-metadata = io.open('metadata.tsv', 'w', encoding='utf-8')
+vectors = io.open('vectors.tsv', 'w', encoding='utf-8') # embeddings
+words = io.open('words.tsv', 'w', encoding='utf-8') # words represented by embeddings
 for word_number_key in range(1, vocab_size):
   word = tokenizer.index_word[word_number_key]
   embeddings = weights[word_number_key]
-  metadata.write(word + '\n')
+  words.write(word + '\n')
   vectors.write('\t'.join([str(x) for x in embeddings]) + '\n')
 vectors.close()
-metadata.close()
+words.close()
 
 # # to download the files into Google Colab:
 # try:
@@ -159,7 +159,7 @@ metadata.close()
 #   pass
 # else:
 #   files.download('vectors.tsv')
-#   files.download('metadata.tsv')
+#   files.download('words.tsv')
 ```
 
 ## to then visualize those exported .tsv files:
