correction: code downloads from Colab, not to

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -152,7 +152,7 @@ for word_number_key in range(1, vocab_size):
 vectors.close()
 words.close()
 
-# # to download the files into Google Colab:
+# # to download the files from Google Colab to your computer:
 # try:
 #   from google.colab import files
 # except ImportError:
