clearer commenting of vectors and words

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -142,8 +142,10 @@ print(tokenizer.word_index) # e.g., {word: 1, ...}
 print(tokenizer.index_word) # e.g., {1: word, ...}
 
 import io
-vectors = io.open('vectors.tsv', 'w', encoding='utf-8') # embeddings
-words = io.open('words.tsv', 'w', encoding='utf-8') # words represented by embeddings
+# vectors = embeddings for each word
+# words = "metadata" (labels/words represented by those embeddings)
+vectors = io.open('vectors.tsv', 'w', encoding='utf-8')
+words = io.open('words.tsv', 'w', encoding='utf-8')
 for word_number_key in range(1, vocab_size):
   word = tokenizer.index_word[word_number_key]
   embeddings = weights[word_number_key]
