plotting accuracy and loss and dealing with decreasing confidence in validation predictions

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -74,6 +74,7 @@ with open('data.csv', 'r') as f:
 ```
 
 ```py
+# hyperparameters:
 vocab_size = 100
 embedding_dim = 16
 max_length = 120
@@ -124,13 +125,30 @@ model = tf.keras.Sequential([
 ])
 model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])
 model.summary()
-model.fit(
+history = model.fit(
   padded,
   train_labels_final,
   epochs=num_epochs,
   validation_data=(test_padded, test_labels_final)
 )
 ```
+
+```py
+import matplotlib.pyplot as plt
+
+def plot_graphs(history, string):
+  plt.plot(history.history[string])
+  plt.plot(history.history['val_' + string])
+  plt.xlabel('Epochs')
+  plt.ylabel(string)
+  plt.legend([string, 'val_' + string])
+  plt.show()
+
+plot_graphs(history, 'acc')
+plot_graphs(history, 'loss')
+```
+
+Note: often for text data, you might notice validation (AKA test) accuracy increase but its loss increase = slowly more accurate predictions over time but confidence per prediction decreased. Try playing with hyperparameters to see what performs best.
 
 ## visualize the model's embeddings
 
