links to more on the catalog of TFDS

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -35,6 +35,8 @@
   test_labels_final = np.array(test_labels)
   ```
 
+  - more: https://github.com/tensorflow/datasets/tree/master/docs/catalog and https://www.tensorflow.org/datasets/catalog/overview
+
 ## load JSON data into Python:
 
 ```py
