index_word = tokenizer.index_word

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -160,6 +160,7 @@ weights = embedding_layer.get_weights()
 print(weights.shape) # shape: (vocab_size, embedding_dim), e.g. (10000, 16)
 print(tokenizer.word_index) # e.g., {word: 1, ...}
 print(tokenizer.index_word) # e.g., {1: word, ...}
+index_word = tokenizer.index_word
 
 import io
 # vectors = embeddings for each word
@@ -167,7 +168,7 @@ import io
 vectors = io.open('vectors.tsv', 'w', encoding='utf-8')
 words = io.open('words.tsv', 'w', encoding='utf-8')
 for word_number_key in range(1, vocab_size):
-  word = tokenizer.index_word[word_number_key]
+  word = index_word[word_number_key] # index_word as opposed to word_index
   embeddings = weights[word_number_key]
   words.write(word + '\n')
   vectors.write('\t'.join([str(x) for x in embeddings]) + '\n')
