https://projector.tensorflow.org/ at top

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -8,6 +8,8 @@
 
 - discussion forum: https://community.deeplearning.ai/c/tf1/tf1-course-3/81
 
+- to visualize embeddings (.tsv files): https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
+
 - sarcasm detection dataset: https://www.kaggle.com/rmisra/news-headlines-dataset-for-sarcasm-detection/home
 
 - IMDB review dataset: https://ai.stanford.edu/~amaas/data/sentiment/
