--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -190,3 +190,32 @@ words.close()
 ## to then visualize those exported .tsv files:
 
 https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
+
+## RNN and LSTM
+
+RNN = pass info to next time step
+
+LSTM = remember some info from even far-away previous time steps, or even affect past time steps
+
+## LSTM code
+
+```py
+model = tf.keras.Sequential([
+  tf.keras.layers.Embedding(tokenizer.vocab_size, 64),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64)), # <-- LSTM with 64 outputs
+  # Bidirectional means cell state can go in both directions, as mentioned above, and doubles the size of the layer
+  tf.keras.layers.Dense(64, activation='relu'),
+  tf.keras.layers.Dense(1, activation='sigmoid')
+])
+```
+
+```py
+model = tf.keras.Sequential([
+  tf.keras.layers.Embedding(tokenizer.vocab_size, 64),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64, return_sequences=True)),
+  # need return_sequences=True to make sure the output size is next input size
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),
+  tf.keras.layers.Dense(64, activation='relu'),
+  tf.keras.layers.Dense(1, activation='sigmoid')
+])
+```
