more RNN/LSTM/GRU notes

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -191,9 +191,9 @@ words.close()
 
 https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary clustering of the data)
 
-## RNN and LSTM
+## RNN and LSTM to take word order into account
 
-RNN = pass info to next time step
+RNN = pass info to next time step (GRU and LSTM are example types of RNN)
 
 LSTM = remember some info from even far-away previous time steps, or even affect past time steps
 
@@ -209,6 +209,8 @@ model = tf.keras.Sequential([
 ])
 ```
 
+## stacking LSTMs can be better by smoothening accuracy over epochs
+
 ```py
 model = tf.keras.Sequential([
   tf.keras.layers.Embedding(tokenizer.vocab_size, 64),
@@ -218,4 +220,29 @@ model = tf.keras.Sequential([
   tf.keras.layers.Dense(64, activation='relu'),
   tf.keras.layers.Dense(1, activation='sigmoid')
 ])
+```
+
+## combining LSTM with previous concepts
+
+- make sure to test accuracy and validation accuracy over epochs
+- note if the validation accuracy is same or better than without LSTM
+- note that if the validation accuracy or loss are getting worse, there may be overfitting potentially (especially with a small model and lots of OOV words in the validation set), so try tweaking the parameters or layers
+
+```py
+model = tf.keras.Sequential([
+  tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),
+
+  # tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),
+  # # or:
+  # tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32)),
+  # or:
+  tf.keras.layers.Conv1D(128, 5, activation='relu'),
+  tf.keras.layers.GlobalAveragePooling1D(), # or tf.keras.layers.GlobalMaxPooling1D(),
+
+  tf.keras.layers.Dense(6, activation='relu'),
+  tf.keras.layers.Dense(1, activation='sigmoid')
+])
+model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])
+model.summary()
+# history = model.fit(...)
 ```
