correction: small model --> small dataset

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -226,7 +226,7 @@ model = tf.keras.Sequential([
 
 - make sure to test accuracy and validation accuracy over epochs
 - note if the validation accuracy is same or better than without LSTM
-- note that if the validation accuracy or loss are getting worse, there may be overfitting potentially (especially with a small model and lots of OOV words in the validation set), so try tweaking the parameters or layers
+- note that if the validation accuracy or loss are getting worse, there may be overfitting potentially (especially with a small dataset and lots of OOV words in the validation set), so try tweaking the parameters or layers
 
 ```py
 model = tf.keras.Sequential([
