--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -232,12 +232,12 @@ model = tf.keras.Sequential([
 model = tf.keras.Sequential([
   tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),
 
-  # tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),
+  tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(10)), # try simpler first!
   # # or:
-  # tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32)),
-  # or:
-  tf.keras.layers.Conv1D(128, 5, activation='relu'),
-  tf.keras.layers.GlobalAveragePooling1D(), # or tf.keras.layers.GlobalMaxPooling1D(),
+  # tf.keras.layers.Bidirectional(tf.keras.layers.GRU(10)),
+  # # or:
+  # tf.keras.layers.Conv1D(128, 5, activation='relu'),
+  # tf.keras.layers.GlobalAveragePooling1D(), # or tf.keras.layers.GlobalMaxPooling1D(),
 
   tf.keras.layers.Dense(6, activation='relu'),
   tf.keras.layers.Dense(1, activation='sigmoid')
