generating text with an RNN

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -246,3 +246,7 @@ model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy']
 model.summary()
 # history = model.fit(...)
 ```
+
+## generating text with an RNN
+
+https://www.tensorflow.org/text/tutorials/text_generation
