what LSTM and GRU stand for

--- a/my_coursera_notes/C3.md
+++ b/my_coursera_notes/C3.md
@@ -195,7 +195,9 @@ https://projector.tensorflow.org/ --> Load data --> Sphereize data (for binary c
 
 RNN = pass info to next time step (GRU and LSTM are example types of RNN)
 
-LSTM = remember some info from even far-away previous time steps, or even affect past time steps
+LSTM = Long Short-Term Memory = remember some info from even far-away previous time steps, or even affect past time steps
+
+GRU = Gated Recurrent Unit
 
 ## LSTM code
 
